--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-/* ***** GENERAL ***** */
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
@@ -12,7 +11,15 @@ html {
 body {
     line-height: 1.6;
     color: #232b2b;
-    background: #f4f4f4;
+    background: #fdfdfd;
     margin: 0;
     padding: 0;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.nav-link {
+    color: #232b2b;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
