--- a/templates/base.html
+++ b/templates/base.html
@@ -18,14 +18,32 @@
     <title>youtube-to-mp4</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
+    <header class="d-flex justify-content-between py-3 mb-4">
+        <a href="{{ url_for('index') }}" class="link-body-emphasis text-decoration-none">
+            <h1 class="fs-4">youtube-to-mp4</h1>
+        </a>
+        <nav>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('privacy') }}">Privacy Policy</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main class="container">
         <div class="row justify-content-center align-items-center text-center">
             <div class="col-12">
-            {% block content %}{% endblock %}
+                {% block content %}{% endblock %}
             </div>
         </div>
     </main>
+    
+    <footer class="py-3 mt-auto">
+        <p class="text-center text-body-secondary">Made by <a href="https://github.com/spken">@spken</a></p>
+    </footer>
+
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
