Add video to page, downloadable, wrong size

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,3 +63,9 @@ button:hover {
     background-color: #ff6061;
     transform: scale(1.02);
 }
+
+.video {
+    display: none;
+    height: auto;
+    width: auto;
+}
