--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             <button onclick="download(document.getElementById('search').value)">Download</button>
         </div>
         <div class="row">
-            <video id="video" src="" type="video/mp4" hidden></video>
+            <iframe id="video" src="" class="video">Video is unsupported in your browser.</iframe>
         </div>
     </div>
 {% endblock %}
