Adjust size to fit

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,8 +64,20 @@ button:hover {
     transform: scale(1.02);
 }
 
-.video {
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
     display: none;
-    height: auto;
-    width: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
