--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,8 @@
         <div class="col-md-3 col-xs-12">
             <button onclick="download(document.getElementById('search').value)">Download</button>
         </div>
-        <div class="row">
-            <iframe id="video" src="" class="video">Video is unsupported in your browser.</iframe>
+        <div class="row video-container">
+            <iframe id="video" src="">Video is unsupported in your browser.</iframe>
         </div>
     </div>
 {% endblock %}
