--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <div class="row">
         <div class="col-md-9 col-xs-12">
             <input type="text" class="form-control" name="search" id="search" placeholder="Enter URL">
+            <!-- TODO: search functionality for videos -->
         </div>
         <div class="col-md-3 col-xs-12">
             <button onclick="download(document.getElementById('search').value)">Download</button>
